--- a/User-registration/aboutus.html
+++ b/User-registration/aboutus.html
@@ -80,8 +80,7 @@
     <hr>
     <br>
     <p>
-      This Specialization covers foundational data science tools and techniques, including getting, cleaning, and exploring data, programming in R, and conducting reproducible research. Learners who complete this specialization will be prepared to take the Data Science: Statistics and Machine Learning specialization, in which they build a data product using real-world data.
-
+      Tajhsbdaysgvdjashvdljhasvlfjhgvsdjfhasdohfgasdh
     </p>
   </div>
   <div class="member">
