Added content in student page
-Added content in student page
-Added logo in footer

--- a/User-registration/Homepage.html
+++ b/User-registration/Homepage.html
@@ -167,6 +167,7 @@ function showSlides(n) {
 </script>
 <div class="footer"> 
   <br><hr><br>
+  <img src="Templates/Images/logo.png" width="75">
   &copy 2020 Valorant Coaching Classes. ALL RIGHTS RESERVED.
   <ul>
     <li><a href=""><img src="Templates/Images/facebook.png"></a></li>
