--- a/User-registration/aboutus.html
+++ b/User-registration/aboutus.html
@@ -66,23 +66,21 @@
       </div>
     </div>
   </div>
-<div class="informationmembers">
+<div class="informationmembers" style="padding: 10px 10px 10px 10px; width: 80%; margin: auto;">
     <div class="member">
-    <p><h2>Python</h2></p>
-    <hr>
-    <br>
-    <p>
-      This Specialization builds on the success of the Python for Everybody course and will introduce fundamental programming concepts including data structures, networked application program interfaces, and databases, using the Python programming language. In the Capstone Project. You'll use the technologies learned throughout the Specialization to design and create your own applications for data retrieval, processing, and visualization.
-    </p>
+    <p><h2>About Valorant Coaching</h2></p><br>
+    <article>
+        Valorant Coaching Classes was established in Mumbai in the year 2020. It was founded by 4 people - Shiv Avashia, Bhavik Bolya, Ananay Agarwal and Samar Bansod. Baaki koi likh dena.
+    </article>
   </div>
+  <br><br>
   <div class="member">
-    <p><h2>Java</h2></p>
-    <hr>
-    <br>
+    <p><h2>Our Courses</h2></p><br>
     <p>
-      Tajhsbdaysgvdjashvdljhasvlfjhgvsdjfhasdohfgasdh
+      Python, Java and R
     </p>
   </div>
+  <br><br>
   <div class="member">
     <p><h2>R</h2></p>
     <hr>
@@ -157,6 +155,7 @@ function showSlides(n) {
 </script>
 <div class="footer"> 
   <br><hr><br>
+  <img src="Templates/Images/logo.png" width="75">
   &copy 2020 Valorant Coaching Classes. ALL RIGHTS RESERVED.
   <ul>
     <li><a href=""><img src="Templates/Images/facebook.png"></a></li>
