--- a/User-registration/aboutus.html
+++ b/User-registration/aboutus.html
@@ -70,7 +70,10 @@
     <div class="member">
     <p><h2>About Valorant Coaching</h2></p><br>
     <article>
-        Valorant Coaching Classes was established in Mumbai in the year 2020. It was founded by 4 people - Shiv Avashia, Bhavik Bolya, Ananay Agarwal and Samar Bansod. Baaki koi likh dena.
+        Valorant Coaching Classes was established in Mumbai in the year 2020. It was founded by 4 people - Shiv Avashia, Bhavik Bolya, Ananay Agarwal and Samar Bansod. 
+        Valorant was essentially established to serve the need of creating an innovative and integrated space for technology education interspersed with sound management practices that converged with changing industry as well as societal needs. 
+        The vision was to match the emerging demands in the field by creating holistically trained engineers possessing sound technical expertise as well as a vision to integrate their knowledge into creating technology that serves the changing needs of present world. 
+        Valorant today, with its state-of-the-art labs and world class infrastructure stands a live testimony to the steady realization of this vision.
     </article>
   </div>
   <br><br>
