About us and Login Styling commint

--- a/User-registration/aboutus.html
+++ b/User-registration/aboutus.html
@@ -85,27 +85,38 @@
   </div>
   <br><br>
   <div class="member">
-    <p><h2>R</h2></p>
+    
     <hr>
     <br>
     <p>
-      Take your first step towards a career in software development with this introduction to Java—one of the most in-demand programming languages and the foundation of the Android operating system. Designed for beginners, this Specialization will teach you core programming concepts and equip you to write programs to solve complex problems. In addition, you will gain the foundational skills a software engineer needs to solve real-world problems, from designing algorithms to testing and debugging your programs.
-    </p>
+      <h3 style="color: #1E1B08">What Makes Us Different?</h3>
+      <h4 style="color: #1E1B08">Personalised Learning</h4>
+      <br>
+      Our niche is creating personalised learning experiences for every type of learner. The Valorant way of learning provides students a learning platform where they can learn, engage and be excited about charting their own path to discover the world. Valorant - The Learning Platform brings together the best teachers, technology, content, media for creating a seamless, world class learning experience for each and every student.
+          </p>
   </div>
   <div class="member">
-    <p><h2>R</h2></p>
+   
     <hr>
     <br>
     <p>
-      Take your first step towards a career in software development with this introduction to Java—one of the most in-demand programming languages and the foundation of the Android operating system. Designed for beginners, this Specialization will teach you core programming concepts and equip you to write programs to solve complex problems. In addition, you will gain the foundational skills a software engineer needs to solve real-world problems, from designing algorithms to testing and debugging your programs.
-    </p>
-  </div>
-  <div class="member">
-    <p><h2>R</h2></p>
-    <hr>
-    <br>
-    <p>
-      Take your first step towards a career in software development with this introduction to Java—one of the most in-demand programming languages and the foundation of the Android operating system. Designed for beginners, this Specialization will teach you core programming concepts and equip you to write programs to solve complex problems. In addition, you will gain the foundational skills a software engineer needs to solve real-world problems, from designing algorithms to testing and debugging your programs.
+      <h3 style="color: #1E1B08">Technology Enabled Learning</h3>
+      <br>
+      At Valorant, we leverage technology to merge best practices like use of videos, engaging content and quizzes with the best teachers so that every child across the globe has access to the best learning experiences.
+      <br>
+      <br>
+      <h4 style="color: #1E1B08">Key features of the learning program:</h4>
+
+      Technology Enabled Learning
+      At Valorant, we leverage technology to merge best practices like use of videos, engaging content and quizzes with the best teachers so that every child across the globe has access to the best learning experiences.
+      <br>
+      <br>
+      <h4 style="color: #1E1B08">Key features:</h4>
+      <ol>
+        <li> Interactive and engaging learning modules</li>
+        <li>Visually rich content to enable conceptual clarity and lifelong term retention</li>
+        <li>Personalised learning programs designed for every student, enabled by the power of data science</li>
+      </ol>
     </p>
   </div>
 </div>
