--- a/User-registration/Homepage.html
+++ b/User-registration/Homepage.html
@@ -15,7 +15,7 @@
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="Homepage.html">Home</a></li>
+        <!-- <li><a href="Homepage.html">Home</a></li> -->
         <li><a href="http://localhost/STUDENT-COACHING-PORTAL/User-registration/aboutus.html">About</a></li>
         <!-- <li><a href="#">Services</a></li> -->
         <li><a href="http://localhost/STUDENT-COACHING-PORTAL/User-registration/register.php">Register</a></li>
@@ -80,7 +80,7 @@
     <hr>
     <br>
     <p>
-      Take your first step towards a career in software development with this introduction to Java-one of the most in-demand programming languages and the foundation of the Android operating system. Designed for beginners, this Specialization will teach you core programming concepts and equip you to write programs to solve complex problems. In addition, you will gain the foundational skills a software engineer needs to solve real-world problems, from designing algorithms to testing and debugging your programs.
+      Take your first step towards a career in software development with this introduction to Java-one of the most in-demand programming languages and the foundation of the Android operating system. Designed for beginners, this Specialization will teach you core programming concepts and equip you to write programs to solve complex problems. 
     </p>
   </div>
   <div id="R">
@@ -107,7 +107,7 @@
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="password1" required>
 
-      <input type="submit" name="submit" id="submit1" value="Generate" class="btn">
+      <input type="submit" name="submit" id="submit1" value="Login" class="btn">
       <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
     </form>
   </div>
