Styling changes in Admin pages

--- a/User-registration/Homepage.html
+++ b/User-registration/Homepage.html
@@ -99,7 +99,7 @@
 
   <div class="form-popup" id="myForm">
     <form method="post" action="http://localhost/STUDENT-COACHING-PORTAL/User-registration/checklogin.php" class="form-container">
-      <h1>Login</h1>
+      <h1 style="text-align: center;">Login</h1>
 
       <label for="email"><b>Username</b></label>
       <input type="text" placeholder="Enter Name" name="username1" required>
